Add the models.RollStatsData type
