# docs/swagger.json
@@ -62,10 +62,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "integer"
-                            }
+                            "$ref": "#/definitions/models.RollStatsData"
                         }
                     }
                 }
@@ -91,6 +88,12 @@
                         "type": "integer"
                     }
                 }
+            }
+        },
+        "models.RollStatsData": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "integer"
             }
         }
     }
